--- a/src/sass/pointer-meter.scss
+++ b/src/sass/pointer-meter.scss
@@ -2,6 +2,7 @@ $pointer-meter-width: 300px;
 
 .pointer-meter {
 	height: 165px;
+	margin: 0 auto;
 	position: relative;
 	width: $pointer-meter-width;
 }
