--- a/src/sass/global.scss
+++ b/src/sass/global.scss
@@ -4,6 +4,12 @@ body {
 	padding: 0;
 }
 
+body {
+	color: #eee;
+	font-family: sans-serif;
+	font-size: 20px;
+}
+
 .meter-container {
 	background:  #555;
 	margin: 50px auto 0 auto;
